// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TransformFactory#create TransformFactory#create throw for invalid input (boolean: true) 1`] = `
"Invalid reducer type. Could not find a matching reducer type while parsing the value:
true
Try using an Array, String, Object, or Function.
More info: https://github.com/ViacomInc/data-point/tree/master/packages/data-point#reducers
"
`;

exports[`TransformFactory#create TransformFactory#create throw for invalid input (number: 1) 1`] = `
"Invalid reducer type. Could not find a matching reducer type while parsing the value:
1
Try using an Array, String, Object, or Function.
More info: https://github.com/ViacomInc/data-point/tree/master/packages/data-point#reducers
"
`;
